--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import DefaultLayout from "../layouts/Default.astro"
+import { FeaturesCardsSection } from "../sections/FeaturesCards"
 import { HeaderSection } from "../sections/Header"
 import { HeroSection} from "../sections/Hero"
 ---
@@ -7,4 +8,5 @@ import { HeroSection} from "../sections/Hero"
 <DefaultLayout>
   <HeaderSection />
   <HeroSection />
+  <FeaturesCardsSection />
 </DefaultLayout>
